# Advanced_CPP_Research

./: .gitignore  README.md  idiom.txt
AdvancedCPP_SLT/BankManagement/: BankManagement.pro  main.cpp  person.cpp  person.h
AdvancedCPP_SLT/QSqlTest_ConsoleApp/: Makefile  QSqlTest_ConsoleApp.pro.user.1098eaf  QSqlTest_ConsoleApp.pro.user.d9d7665  QSqlTest_ConsoleApp.pro.user.e937783  connection.h  main (thieuquangtuan-Aspire-E5-575G's conflicted copy 2017-09-26).cpp  main.cpp
AdvancedCPP_SLT/functionTemplate/: ftemplate.h  functionTemplate.pro  functionTemplate.pro.user.2f55754  functionTemplate.pro.user.9517059  list.h  node.h
Assembler/: BT10_Chuong3.asm  BT11_Chuong3.asm  BT12_Chuong3.asm  BT13_Chuong3.asm  BT16_2_Chuong3.asm  BT16_Chuong3.asm  BT17_Chuong3.asm  BT19_Chuong3.asm  BT1_Chuong3.asm  BT20_Chuong3.asm  BT21_Chuong3.asm  BT22_Chuong3.asm  BT24_2_Chuong3.asm  BT24_Chuong3.asm  BT25_Chuong3.asm  BT26_Chuong3.asm  BT27_Chuong3.asm  BT28_Chuong3.asm  BT9_2_Chuong3.asm  BT9_Chuong3.asm  Tong.asm  TongBTC3.asm  VD10_Chuong3.asm  VD5_Chuong3.asm  VD6_Chuong3.asm  VD7_Chuong3.asm  VD8_Chuong3.asm  VD9_Chuong3.asm  VeHCN.asm  mang.asm  mycode.2asm.asm  mycode.asm  nhapMang.asm  testASM_De3_bai2.asm  tim_min_max.asm  tinhhople.asm  tutorial.txt
Bitwise_Advanced/: tunnelbitwise.h
Bitwise_op/Bitwise_Advanced/: Bitwise_Advanced.pro  main.cpp  note.txt
Bitwise_op/CompressionBench/: CompressionBench  CompressionBench.pro  FeedBackRegister.h  TemplatePCMsg.cpp  TemplatePCMsg.h  main.cpp
Bitwise_op/StreamCipher/: FeedBackRegister.h  StreamCipher  StreamCipher.pro  XTEA.cpp  XTEA.h  main.cpp
BuildGenerator/: CMakeLists.txt
BuildGenerator/CMakes/: CMakeLists.txt_present_options_to_user
Custom_std_allocator/: Custom_std_allocator.pro  main (thieuquangtuan-X470-AORUS-ULTRA-GAMING's conflicted copy 2019-03-31).cpp  main.cpp  minimalalloc.h  minimalpoolalloc (thieuquangtuan-X470-AORUS-ULTRA-GAMING's conflicted copy 2019-03-31).h  minimalpoolalloc.h  minimalpoolallocator.h  poolallocator.h  tobject.cpp
DataStructuresImp/: tutorial.txt
DataStructuresImp/BitcaskSimple/: BitcaskSimple.pro  KVPairLog.h  KVPairLog_inl.h  main.cpp
DataStructuresImp/Exercise_1/: Exercise_1.pro  circle.cpp  circle.h  equitriangle.cpp  equitriangle.h  main.cpp  shape.cpp  shape.h  square.cpp  square.h
DataStructuresImp/Exercise_2/: Exercise_2.pro  dog.cpp  dog.h  fish.cpp  fish.h  main.cpp  pet.cpp  pet.h
DataStructuresImp/Exercise_3/: Exercise_3.pro  decnumber.cpp  decnumber.h  hexnumber.cpp  hexnumber.h  main.cpp  number.cpp  number.h  octnumber.cpp  octnumber.h
DataStructuresImp/Exercise_4/: Exercise_4.pro  Exercise_4.pro.user.dd90592  dlist.h  main.cpp  menu.cpp  menu.h  node.h
DataStructuresImp/Exercise_5/: Exercise_5.pro  Exercise_5.pro.user.dd90592  main.cpp  node.h  qqueue.h  qstack.h  stack_or_queue.h
DataStructuresImp/LexicographicalCompare/: main.cpp
DemoCMakeBuild/: CMakeLists.txt  StopWatch.h  main.cpp
DesignPattern_Examples/Decorator_Pattern/: Decorator_Pattern.pro  computer.cpp  computer.h  main.cpp
DesignPattern_Examples/DesignPattern_Exercise_6/: DesignPattern_Exercise_6.pro  actionenum.h  circle.cpp  circle.h  cuboid.cpp  cuboid.h  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  shapemanagement.cpp  shapemanagement.h  shapeview.cpp  shapeview.h  sphere.cpp  sphere.h
DesignPattern_Examples/Strategy_Pattern/: Strategy_Pattern.pro  car.cpp  car.h  fonefomular.cpp  fonefomular.h  goalgorithm.h  gobydrivealgorithm.cpp  gobydrivealgorithm.h  gobyflyingalgorithm.cpp  gobyflyingalgorithm.h  gobyflyingfastalgorithm.cpp  gobyflyingfastalgorithm.h  helicopter.cpp  helicopter.h  jetfighter.cpp  jetfighter.h  main.cpp  vehicle.cpp  vehicle.h
DesignPattern_Examples/Strategy_Pattern_3/: duck.cpp  duck.h  main.cpp  pekinduck.cpp  pekinduck.h  rubberduck.cpp  rubberduck.h
DiamonProblem/: DiamonProblem.pro  harddiskdrive.cpp  harddiskdrive.h  hybridharddrive.cpp  hybridharddrive.h  main.cpp  solidstatedrive.cpp  solidstatedrive.h  storagedevice.cpp  storagedevice.h
GetIpAddressOfHostname_BasicSocket/: main.cpp
Iterator_Examples/: Iterator_Examples.pro.user.9517059  main.cpp  player.cpp  player.h
Iterator_Examples/STL_IteratorApproach/: NumericRange.h  main.cpp
JNI_lib/: systime.cpp
JNI_lib/libsystime/: systime.h
MemoryManagement/: tutorial.txt
MiniProjects/DeployParse/: main.cpp
MiniProjects/functionTemplate/: .clang-format  CMakeLists.txt  main.cpp  stack.h
MiniProjects/functionTemplate/inc/: ftemplate.h  list.h  message.h  node.h  stack.h  version.h.in
MiniProjects/functionTemplate/src/: main.cpp  message.cpp
MultiThread/: tutorial.txt
MultiThread/LWorker/: CMakeLists.txt  RunnableIf.h  looprunnable.cpp  looprunnable.h  looprunnableadapter.h  main.cpp  util.h  workable.cpp  workable.h
MultiThread_Examples/: tutorial.txt
ProcessCpuUsage/: ProcessCpuUsage.pro  ProcessCpuUsage.pro.user.4.9-pre1  main.cpp  processutil.cpp  processutil.h
Random/: tutorial.txt
RandomEngine/: main.cpp
Socket/: poco  tutorial.txt  zpoco
cmake/: CMakeLists.txt  main.cpp
referenceSources/: ZTCbcEncryption.java  ZTCryptorMethod_CBC.cpp  ZTCryptorMethod_CBC.h  consumption.h  proc_util.cpp  proc_util.h
smartPointer_Cpp11/: player.cpp  player.h  position.h  smartPointer_Cpp11.pro.user.2f55754  smartPointer_Cpp11.pro.user.9517059  smartPointer_Cpp11.pro.user.e8207ed
(+214 files in other folders)
